<resources>
    <string name="app_name">projeManage</string>

    <string name="intro_description_title_text">さぁ！始めよう!!</string>
    <string name="intro_description_text">Collaborate and Plan Together Across Multiple\nDevices on Projemanag\'s Minimalist interface.</string>
    <string name="intro_sign_in_text">SIGN IN</string>
    <string name="intro_sign_up_text">SIGN UP</string>

    <string name="sign_up_title">SIGN UP</string>
    <string name="sign_up_description_text">名前、メールアドレス、パスワードを入れてください</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="load_dialog_message">通信中..</string>

    <string name="sign_in_title">SIGN IN</string>
    <string name="sign_in_description_text">メールアドレス、パスワードを入れてください</string>

    <string name="check_message_for_back_to_exit">戻るボタンを押すと閉じることができます。</string>

    <string name="my_profile">プロファイル</string>
    <string name="sign_out">サインアウト</string>

    <string name="image_contentDescription">写真</string>

</resources>